@@ -71,4 +71,5 @@ void Init_native()
   init_xml_syntax_error();
   init_html_entity_lookup();
   init_xml_schema();
+  init_xml_relax_ng();
 }
