@@ -1,9 +1,9 @@
-#include <xml_schema.h>
+#include <xml_relax_ng.h>
 
 static void dealloc(xmlSchemaPtr schema)
 {
   NOKOGIRI_DEBUG_START(doc);
-  xmlSchemaFree(schema);
+  xmlRelaxNGFree(schema);
   NOKOGIRI_DEBUG_END(doc);
 }
 
@@ -11,34 +11,34 @@ static void dealloc(xmlSchemaPtr schema)
  * call-seq:
  *  validate_document(document)
  *
- * Validate a Nokogiri::XML::Document against this Schema.
+ * Validate a Nokogiri::XML::Document against this RelaxNG schema.
  */
 static VALUE validate_document(VALUE self, VALUE document)
 {
   xmlDocPtr doc;
-  xmlSchemaPtr schema;
+  xmlRelaxNGPtr schema;
 
-  Data_Get_Struct(self, xmlSchema, schema);
+  Data_Get_Struct(self, xmlRelaxNG, schema);
   Data_Get_Struct(document, xmlDoc, doc);
 
   VALUE errors = rb_ary_new();
 
-  xmlSchemaValidCtxtPtr valid_ctxt = xmlSchemaNewValidCtxt(schema);
+  xmlRelaxNGValidCtxtPtr valid_ctxt = xmlRelaxNGNewValidCtxt(schema);
 
   if(NULL == valid_ctxt) {
     // we have a problem
     rb_raise(rb_eRuntimeError, "Could not create a validation context");
   }
 
-  xmlSchemaSetValidStructuredErrors(
+  xmlRelaxNGSetValidStructuredErrors(
     valid_ctxt,
     Nokogiri_error_array_pusher,
     (void *)errors
   );
 
-  xmlSchemaValidateDoc(valid_ctxt, doc);
+  xmlRelaxNGValidateDoc(valid_ctxt, doc);
 
-  xmlSchemaFreeValidCtxt(valid_ctxt);
+  xmlRelaxNGFreeValidCtxt(valid_ctxt);
 
   return errors;
 }
@@ -47,12 +47,11 @@ static VALUE validate_document(VALUE self, VALUE document)
  * call-seq:
  *  read_memory(string)
  *
- * Create a new Schema from the contents of +string+
+ * Create a new RelaxNG from the contents of +string+
  */
 static VALUE read_memory(VALUE klass, VALUE content)
 {
-
-  xmlSchemaParserCtxtPtr ctx = xmlSchemaNewMemParserCtxt(
+  xmlRelaxNGParserCtxtPtr ctx = xmlRelaxNGNewMemParserCtxt(
       (const char *)StringValuePtr(content),
       RSTRING_LEN(content)
   );
@@ -60,16 +59,16 @@ static VALUE read_memory(VALUE klass, VALUE content)
   VALUE errors = rb_ary_new();
   xmlSetStructuredErrorFunc((void *)errors, Nokogiri_error_array_pusher);
 
-  xmlSchemaSetParserStructuredErrors(
+  xmlRelaxNGSetParserStructuredErrors(
       ctx,
       Nokogiri_error_array_pusher,
       (void *)errors
   );
 
-  xmlSchemaPtr schema = xmlSchemaParse(ctx);
+  xmlRelaxNGPtr schema = xmlRelaxNGParse(ctx);
 
   xmlSetStructuredErrorFunc(NULL, NULL);
-  xmlSchemaFreeParserCtxt(ctx);
+  xmlRelaxNGFreeParserCtxt(ctx);
 
   if(NULL == schema) {
     xmlErrorPtr error = xmlGetLastError();
@@ -89,14 +88,14 @@ static VALUE read_memory(VALUE klass, VALUE content)
   return rb_schema;
 }
 
-VALUE cNokogiriXmlSchema;
-void init_xml_schema()
+VALUE cNokogiriXmlRelaxNG;
+void init_xml_relax_ng()
 {
   VALUE nokogiri = rb_define_module("Nokogiri");
   VALUE xml = rb_define_module_under(nokogiri, "XML");
-  VALUE klass = rb_define_class_under(xml, "Schema", rb_cObject);
+  VALUE klass = rb_define_class_under(xml, "RelaxNG", cNokogiriXmlSchema);
 
-  cNokogiriXmlSchema = klass;
+  cNokogiriXmlRelaxNG = klass;
 
   rb_define_singleton_method(klass, "read_memory", read_memory, 1);
   rb_define_private_method(klass, "validate_document", validate_document, 1);
