@@ -19,6 +19,7 @@ require 'nokogiri/xml/notation'
 require 'nokogiri/xml/element'
 require 'nokogiri/xml/entity_declaration'
 require 'nokogiri/xml/schema'
+require 'nokogiri/xml/relax_ng'
 
 module Nokogiri
   class << self
