@@ -1,0 +1,29 @@
+module Nokogiri
+  module XML
+    class << self
+      def RelaxNG string_or_io
+        RelaxNG.new(string_or_io)
+      end
+    end
+
+    ###
+    # Nokogiri::XML::RelaxNG is used for validating XML against a
+    # RelaxNG schema.
+    #
+    # == Synopsis
+    #
+    # Validate an XML document against a RelaxNG schema.  Loop over the errors
+    # that are returned and print them out:
+    #
+    #   schema  = Nokogiri::XML::RelaxNG(File.read(ADDRESS_SCHEMA_FILE))
+    #   doc     = Nokogiri::XML(File.read(ADDRESS_XML_FILE))
+    #
+    #   schema.validate(doc).each do |error|
+    #     puts error.message
+    #   end
+    #
+    # The list of errors are Nokogiri::XML::SyntaxError objects.
+    class RelaxNG < Nokogiri::XML::Schema
+    end
+  end
+end
